$Id: History,v 1.28 2001-09-28 19:58:07 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Sep 28, 2001, M.Asai (intercoms-V03-02-07)
- For Batch mode, comment lines are displayed only at verbose level = 2.

Aug 29, 2001, M.Asai (intercoms-V03-02-06)
- Corrections in G4UIbatch to ignore the blank line.

Aug 27, 2001, M.Asai (intercoms-V03-02-05)
- G4UIbatch now displays (G4cerr) the error message.
  Correction according to the bug report #294.

Aug 17, 2001, J.Allison (intercoms-V03-02-04)
- Coworks with vis-V03-02-12 and greps-V03-02-02.
- Added G4VisManager::Draw(const G4Scale&,...

Aug 14, 2001, J.Allison (intercoms-V03-02-03)
- Coworks with vis-V03-02-11 and greps-V03-02-02.
- Moved default value of argument G4Transform3D::Identity from
  G4VSceneHandler::BeginPrimitives to
  G4VGraphicsScene::BeginPrimitives.

July 21, 2001, J.Allison (intercoms-V03-02-02)
- Added G4VGraphicsScene::AddPrimitive(const G4Scale&).

July 18, 2001, M.Asai (intercoms-V03-02-01)
- Added a feature of suppressing program abortion due to G4Exception
  affected files : G4UIcontrolMessenger.hh G4UIcontrolMessenger.cc
- This co-works with global-V03-02-01

July 17, 2001, J.Allison (intercoms-V03-02-00)