@@ -1,4 +1,4 @@
-$Id: History,v 1.28 2001-09-28 19:58:07 asaim Exp $
+$Id: History,v 1.29 2001-10-02 00:32:05 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 1, 2001, M.Asai (intercoms-V03-02-08)
+- Introducing a functionality of "shell variables".
+    New class : G4UIaliasList
+    Modified classes : G4UImanager G4UIcontrolMessenger
 
 Sep 28, 2001, M.Asai (intercoms-V03-02-07)
 - For Batch mode, comment lines are displayed only at verbose level = 2.
